tests/Fixtures/InvalidSmacks/NonCustomSmack.php
<?php declare(strict_types=1);

namespace Visifo\SmackClause\Tests\Fixtures\InvalidSmacks;

use Visifo\SmackClause\SmackMethod;

#[SmackMethod('isNonCustomSmack')]
final readonly class NonCustomSmack {}
